--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
     "http": "^0.0.1-security",
+    "joi-objectid": "^4.0.2",
     "mocha": "^10.0.0",
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.3",
